--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http:http://3.129.43.76:8081/repository/Tesla-web-releases/</url>
+	      <url>http://3.129.43.76:8081/repository/Tesla-web-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http:http://3.129.43.76:8081/repository/Tesla-frontend-snapshot/</url>
+	      <url>http://3.129.43.76:8081/repository/Tesla-frontend-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
